RESOLVED FIXED104605
[soup] Fix build warning in ResourceHandleSoup.cpp
https://bugs.webkit.org/show_bug.cgi?id=104605
Summary [soup] Fix build warning in ResourceHandleSoup.cpp
KyungTae Kim
Reported 2012-12-10 15:21:18 PST
The nextMultipartResponsePartCallback function by bug 94515 has unused parameter 'source' Source/WebCore/platform/network/soup/ResourceHandleSoup.cpp:494:13: warning: unused parameter 'source' [-Wunused-parameter]
Attachments
Patch (1.58 KB, patch)
2012-12-10 15:26 PST, KyungTae Kim
no flags
KyungTae Kim
Comment 1 2012-12-10 15:26:24 PST
WebKit Review Bot
Comment 2 2012-12-10 15:56:06 PST
Comment on attachment 178650 [details] Patch Clearing flags on attachment: 178650 Committed r137218: <http://trac.webkit.org/changeset/137218>
WebKit Review Bot
Comment 3 2012-12-10 15:56:11 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.